[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
tui = "0.19.0"
serde_json = "1.0.96"
crossterm = "0.26.1"
home = "0.5.4"
